// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ci-init: snapshot of the rendered templates > bitbucket renders exactly as expected 1`] = `
"# Generated by \`dev-guardian ci-init bitbucket\` — do not hand-edit the
# pinned versions/checksums below; re-run the generator after a
# dev-guardian release instead. It reads .claude-plugin/plugin.json (the
# release tag) and configs/ci/pinned.json (every scanner checksum) — bump
# those and every value here refreshes together in one command.
#
# What this pipeline does, and why each step exists:
#   1. Runs in a plain node:22-bookworm image — dev-guardian's own floor is
#      Node >= 22.13 (\`node:sqlite\` with no \`--experimental-sqlite\` flag),
#      and Bitbucket checks out this repository into it automatically;
#      there is no separate "checkout" action to pin the way GitHub Actions
#      has.
#   2. Installs curl/git/pipx from Debian's own apt repo — the bookworm
#      base image does not carry them by default.
#   3. Clones dev-guardian itself at a pinned release tag — into \`/tmp\`,
#      OUTSIDE \`$BITBUCKET_CLONE_DIR\` (this checkout), never into a
#      subdirectory of it. dev-guardian is NOT a dependency of this
#      repository, and cloning it INTO the checkout would make step 6's
#      \`dev-guardian scan --project .\` scan dev-guardian's own source,
#      history and its deliberately-vulnerable test fixtures as if they
#      were part of THIS project — polluting the SARIF report, the baseline
#      and the gate with findings that have nothing to do with this
#      repository.
#   4. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed (dev-guardian's own convention: the repo IS the
#      distribution) but its RUNTIME dependencies (execa, zod, yaml, the
#      MCP SDK) still need installing once per run.
#   5. Installs the scanner binaries \`dev-guardian scan\` drives — Trivy,
#      gitleaks and actionlint — each pinned by exact version and verified
#      against a sha256 fetched from that tool's own GitHub release (never
#      "latest"). Semgrep and zizmor are Python-distributed (pipx); pip's
#      own hash-verified resolution against the PyPI index is the
#      applicable integrity mechanism for those two, so they are pinned by
#      exact version instead of a hand-fetched checksum.
#   6. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this pipeline will very likely fail on its first run — do
#      that once locally and commit the result before relying on this gate.
#   7. Declares the SARIF report as a Bitbucket artifact, collected whether
#      the script step succeeds or fails. Bitbucket Pipelines has no native
#      SARIF/code-scanning ingestion the way GitHub does — this is a plain
#      downloadable artifact, attached to the build.
#
# Shell and reuse: same \`set -eu\`, no \`pipefail\`, no \`local\` reasoning as
# the GitLab template (node:22-bookworm's default shell is dash, which has
# neither) — see that template's own header for the full explanation. The
# step itself is defined ONCE, under \`definitions.steps\`, and referenced by
# YAML alias (\`*dev-guardian-scan\`) from both \`default\` and \`pull-requests\`
# — Bitbucket's own documented mechanism for exactly this
# (support.atlassian.com/bitbucket-cloud/docs/yaml-anchors) — rather than
# duplicating the whole step twice in this file.
image: node:22-bookworm

definitions:
  steps:
    - step: &dev-guardian-scan
        name: dev-guardian scan
        script:
          - set -eu
          - apt-get update && apt-get install -y --no-install-recommends curl ca-certificates git pipx
          - export DEV_GUARDIAN_HOME=/tmp/dev-guardian
          - git clone --depth 1 --branch "v2.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"
          - npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"
          - |
            install_checked() {
              name="$1"; url="$2"; sha256="$3"; member="$4"
              curl -sSfL -o "$name.tar.gz" "$url"
              echo "$sha256  $name.tar.gz" | sha256sum -c -
              tar -xzf "$name.tar.gz" "$member"
              install -m 0755 "$member" "/usr/local/bin/$name"
            }
            install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
            install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
            install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
          - pipx install "semgrep==1.178.0"
          - pipx install "zizmor==1.30.1"
          - export PATH="$HOME/.local/bin:$PATH"
          - node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan --project . --fail-on high --format human --sarif dev-guardian-results.sarif
        artifacts:
          - dev-guardian-results.sarif

pipelines:
  default:
    - step: *dev-guardian-scan
  pull-requests:
    '**':
      - step: *dev-guardian-scan

# Paste this at the path shown, or re-run with --write to write it there.
"
`;

exports[`ci-init: snapshot of the rendered templates > github renders exactly as expected 1`] = `
"# Generated by \`dev-guardian ci-init github\` — do not hand-edit the pinned
# SHAs/versions/checksums below; re-run the generator after a dev-guardian
# release instead. It reads .claude-plugin/plugin.json (the release tag) and
# configs/ci/pinned.json (every action SHA and scanner checksum) — bump
# those and every value here refreshes together in one command.
#
# What this job does, and why each step exists:
#   1. Checks out THIS repository (the project being scanned).
#   2. Installs Node.js >= 22.13 — dev-guardian's own floor (\`node:sqlite\`
#      with no \`--experimental-sqlite\` flag).
#   3. Clones dev-guardian itself at a pinned release tag — into
#      \`$RUNNER_TEMP\`, OUTSIDE this checkout, never into a subdirectory of
#      it. dev-guardian is NOT a dependency of this repository (there is no
#      package.json entry for \`npm install\` to fetch it from), and cloning
#      it INTO the checkout would make step 6's \`dev-guardian scan
#      --project .\` scan dev-guardian's own source, history and its
#      deliberately-vulnerable test fixtures as if they were part of THIS
#      project — polluting the SARIF report, the baseline and the gate with
#      findings that have nothing to do with this repository. \`$RUNNER_TEMP\`
#      is the runner's own documented scratch directory: writable, and
#      never checked out into, on every GitHub-hosted and self-hosted
#      runner.
#   4. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed to the dev-guardian repo (its own convention: the repo IS
#      the distribution, no build step at install time) but its RUNTIME
#      dependencies (execa, zod, yaml, the MCP SDK) are ordinary npm
#      packages, not vendored, so they still need installing once per run.
#   5. Installs the scanner binaries \`dev-guardian scan\` drives underneath —
#      Trivy, gitleaks and actionlint — each pinned by exact version and
#      verified against a sha256 fetched from that tool's own GitHub
#      release (never "latest"). Semgrep and zizmor are Python-distributed
#      (pipx); pip's own hash-verified resolution against the PyPI index is
#      the applicable integrity mechanism for those two, so they are pinned
#      by exact version instead of a hand-fetched checksum.
#   6. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this job will very likely fail on its first run — do that
#      once locally and commit the result before relying on this gate.
#   7. Uploads the SARIF report to GitHub code scanning. \`if: always()\` so
#      the upload still runs when step 6 fails the gate (the SARIF file was
#      still written — dev-guardian's own \`scan\` command never skips
#      writing it just because the gate failed); \`continue-on-error: true\`
#      because a repository without GitHub Advanced Security enabled must
#      not fail the whole job over the upload alone — step 6's own gate is
#      what decides pass/fail here, not this step.
name: dev-guardian

on:
  push:
    branches: [main]
  pull_request:

permissions:
  contents: read
  security-events: write

env:
  DEV_GUARDIAN_HOME: \${{ runner.temp }}/dev-guardian

jobs:
  scan:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@3d3c42e5aac5ba805825da76410c181273ba90b1 # v7.0.1

      - name: Set up Node.js
        uses: actions/setup-node@820762786026740c76f36085b0efc47a31fe5020 # v7.0.0
        with:
          node-version: '22'

      - name: Clone dev-guardian (outside this checkout — see the header comment)
        run: |
          set -euo pipefail
          git clone --depth 1 --branch "v2.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"

      - name: Install dev-guardian's runtime dependencies
        run: npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"

      - name: Install scanners (Trivy, gitleaks, actionlint checksum-verified; semgrep/zizmor pinned by version)
        run: |
          set -euo pipefail
          # $1=binary name  $2=download URL  $3=expected sha256  $4=member path inside the tarball
          install_checked() {
            local name="$1" url="$2" sha256="$3" member="$4"
            curl -sSfL -o "$name.tar.gz" "$url"
            echo "$sha256  $name.tar.gz" | sha256sum -c -
            tar -xzf "$name.tar.gz" "$member"
            sudo install -m 0755 "$member" "/usr/local/bin/$name"
          }
          install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
          install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
          install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
          pipx install "semgrep==1.178.0"
          pipx install "zizmor==1.30.1"
          # \`run:\` steps do not share a shell, so \`export PATH=...\` here
          # would not reach the later "dev-guardian scan" step — pipx's own
          # install directory has to be persisted the GitHub Actions way.
          echo "$HOME/.local/bin" >> "$GITHUB_PATH"

      - name: dev-guardian scan
        run: |
          node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan \\
            --project . \\
            --fail-on high \\
            --format human \\
            --sarif dev-guardian-results.sarif

      - name: Upload SARIF to code scanning
        if: always()
        continue-on-error: true
        uses: github/codeql-action/upload-sarif@2892aa5e19bbd11bc0cff5427e3b750a04d9e3c2 # v4.38.2
        with:
          sarif_file: dev-guardian-results.sarif

# Paste this at the path shown, or re-run with --write to write it there.
"
`;

exports[`ci-init: snapshot of the rendered templates > gitlab renders exactly as expected 1`] = `
"# Generated by \`dev-guardian ci-init gitlab\` — do not hand-edit the pinned
# versions/checksums below; re-run the generator after a dev-guardian
# release instead. It reads .claude-plugin/plugin.json (the release tag) and
# configs/ci/pinned.json (every scanner checksum) — bump those and every
# value here refreshes together in one command.
#
# What this job does, and why each step exists:
#   1. Runs in a plain node:22-bookworm image — dev-guardian's own floor is
#      Node >= 22.13 (\`node:sqlite\` with no \`--experimental-sqlite\` flag),
#      and GitLab checks out this repository into it automatically; there
#      is no separate "checkout" action to pin the way GitHub Actions has.
#   2. Installs curl/git/pipx from Debian's own apt repo — the bookworm
#      base image does not carry them by default.
#   3. Clones dev-guardian itself at a pinned release tag — into \`/tmp\`,
#      OUTSIDE \`$CI_PROJECT_DIR\` (this checkout), never into a subdirectory
#      of it. dev-guardian is NOT a dependency of this repository, and
#      cloning it INTO the checkout would make step 6's \`dev-guardian scan
#      --project .\` scan dev-guardian's own source, history and its
#      deliberately-vulnerable test fixtures as if they were part of THIS
#      project — polluting the SARIF report, the baseline and the gate with
#      findings that have nothing to do with this repository.
#   4. \`npm ci --omit=dev\` inside the clone's mcp/ directory. mcp/dist/ is
#      committed (dev-guardian's own convention: the repo IS the
#      distribution) but its RUNTIME dependencies (execa, zod, yaml, the
#      MCP SDK) still need installing once per run.
#   5. Installs the scanner binaries \`dev-guardian scan\` drives — Trivy,
#      gitleaks and actionlint — each pinned by exact version and verified
#      against a sha256 fetched from that tool's own GitHub release (never
#      "latest"). Semgrep and zizmor are Python-distributed (pipx); pip's
#      own hash-verified resolution against the PyPI index is the
#      applicable integrity mechanism for those two, so they are pinned by
#      exact version instead of a hand-fetched checksum.
#   6. Runs \`dev-guardian scan\`, gated against the COMMITTED baseline
#      (.guardian/baseline.json). If this repository has never run
#      \`dev-guardian baseline update\`, every existing finding reads as
#      "new" and this job will very likely fail on its first run — do that
#      once locally and commit the result before relying on this gate.
#   7. Archives the SARIF report as a job artifact either way (\`when:
#      always\`), so it survives a failed gate. Unlike GitHub's code
#      scanning, GitLab's own Security Dashboard does not ingest a plain
#      SARIF file — its \`artifacts:reports:*\` types (\`sast\`,
#      \`secret_detection\`, …) each expect GitLab's OWN JSON schema, which
#      dev-guardian does not produce. This is a plain downloadable artifact,
#      not a native Security Dashboard integration.
#
# Shell: deliberately \`set -eu\`, never \`set -o pipefail\`, and no \`local\` in
# \`install_checked\` — all three are bash-only or bash-safer-but-not-POSIX
# extensions. GitLab's Docker executor runs \`script:\`/\`before_script:\`
# through the image's \`/bin/sh\` — on a Debian-based image such as
# node:22-bookworm that is \`dash\`, and \`set -o pipefail\` there is a hard
# "Illegal option" failure that aborts the job on its very first line,
# before anything else runs. This script's one pipe (\`echo … | sha256sum -c
# -\`) does not need it anyway: a pipeline's exit status is always its LAST
# command's, with or without pipefail, and \`sha256sum -c -\` — the one
# command whose failure must fail the job — already is the last one;
# \`echo\` essentially cannot fail. \`install_checked\`'s variables are plain
# (unprefixed) rather than \`local\` for the identical reason: \`local\` is
# widely supported (dash included) but is not itself POSIX, and nothing
# here needs the extra scoping badly enough to depend on it.
stages:
  - scan

dev-guardian:
  stage: scan
  image: node:22-bookworm
  variables:
    DEV_GUARDIAN_HOME: /tmp/dev-guardian
  before_script:
    - set -eu
    - apt-get update && apt-get install -y --no-install-recommends curl ca-certificates git pipx
  script:
    - set -eu
    - git clone --depth 1 --branch "v2.0.0" "https://github.com/linofcp007/dev-guardian.git" "$DEV_GUARDIAN_HOME"
    - npm ci --omit=dev --prefix "$DEV_GUARDIAN_HOME/mcp"
    - |
      install_checked() {
        name="$1"; url="$2"; sha256="$3"; member="$4"
        curl -sSfL -o "$name.tar.gz" "$url"
        echo "$sha256  $name.tar.gz" | sha256sum -c -
        tar -xzf "$name.tar.gz" "$member"
        install -m 0755 "$member" "/usr/local/bin/$name"
      }
      install_checked trivy "https://github.com/aquasecurity/trivy/releases/download/v0.74.0/trivy_0.74.0_Linux-64bit.tar.gz" "2ae6fe3ee734b7fdf11335663e18c75ea12dccc76062f09f164a3b0f8be4371a" "trivy"
      install_checked gitleaks "https://github.com/gitleaks/gitleaks/releases/download/v8.30.1/gitleaks_8.30.1_linux_x64.tar.gz" "551f6fc83ea457d62a0d98237cbad105af8d557003051f41f3e7ca7b3f2470eb" "gitleaks"
      install_checked actionlint "https://github.com/rhysd/actionlint/releases/download/v1.7.12/actionlint_1.7.12_linux_amd64.tar.gz" "8aca8db96f1b94770f1b0d72b6dddcb1ebb8123cb3712530b08cc387b349a3d8" "actionlint"
    - pipx install "semgrep==1.178.0"
    - pipx install "zizmor==1.30.1"
    - export PATH="$HOME/.local/bin:$PATH"
    - node "$DEV_GUARDIAN_HOME/cli/dev-guardian.mjs" scan --project . --fail-on high --format human --sarif dev-guardian-results.sarif
  artifacts:
    when: always
    paths:
      - dev-guardian-results.sarif
    expire_in: 30 days
  rules:
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH

# Paste this at the path shown, or re-run with --write to write it there.
"
`;
